--- a/ClusterKit.API/ClusterKit.API.Tests/ClusterKit.API.Tests.csproj
+++ b/ClusterKit.API/ClusterKit.API.Tests/ClusterKit.API.Tests.csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.TestPlatform.ObjectModel" Version="14.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
     <PackageReference Include="xunit" Version="2.2.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
   </ItemGroup>
