--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.ConfigurationSource.Migrator/ClusterKit.NodeManager.ConfigurationSource.Migrator.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.ConfigurationSource.Migrator/ClusterKit.NodeManager.ConfigurationSource.Migrator.csproj
@@ -10,8 +10,37 @@
     <Copyright>Copyright ©Mikhail Kantarovskiy and ClusterKit contributors 2017</Copyright>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Update="Migrations\201704211334033_Init.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>201704211334033_Init.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Migrations\201704211334033_Init.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>201704211334033_Init.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Migrations\201705120826119_Second.cs" />
+    <Compile Remove="Migrations\201705120826119_Second.Designer.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Remove="Migrations\201705120826119_Second.resx" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ClusterKit.NodeManager.ConfigurationSource\ClusterKit.NodeManager.ConfigurationSource.csproj" />
     <ProjectReference Include="..\ClusterKit.NodeManager.Migrator.EF\ClusterKit.NodeManager.Migrator.EF.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <DotNetCliToolReference Include="Migrator.EF6.Tools" Version="1.1.3" Imposts="portable-net45+win8+dnxcore50" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="EntityFramework" Version="6.2.0-beta1" />
+  </ItemGroup>
+  
 </Project>
