--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Migrator.EF/ClusterKit.NodeManager.Migrator.EF.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Migrator.EF/ClusterKit.NodeManager.Migrator.EF.csproj
@@ -11,7 +11,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="EntityFramework" Version="6.1.3" />
+    <PackageReference Include="EntityFramework" Version="6.2.0-beta1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\ClusterKit.Data\ClusterKit.Data.EF\ClusterKit.Data.EF.csproj" />
