EFCore: primary updates and SelectBuilder

--- a/ClusterKit.Data/ClusterKit.Data.EF/ClusterKit.Data.EF.csproj
+++ b/ClusterKit.Data/ClusterKit.Data.EF/ClusterKit.Data.EF.csproj
@@ -11,7 +11,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="EntityFramework" Version="6.2.0-beta1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="1.1.2" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\ClusterKit.API\ClusterKit.API.Attributes\ClusterKit.API.Attributes.csproj" />
