--- a/ClusterKit.Data/ClusterKit.Data.EF.Effort/ClusterKit.Data.EF.Effort.csproj
+++ b/ClusterKit.Data/ClusterKit.Data.EF.Effort/ClusterKit.Data.EF.Effort.csproj
@@ -11,7 +11,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Effort.EF6" Version="1.3.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="1.1.2" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ClusterKit.Data.EF\ClusterKit.Data.EF.csproj" />
