--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.ConfigurationSource/ClusterKit.NodeManager.ConfigurationSource.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.ConfigurationSource/ClusterKit.NodeManager.ConfigurationSource.csproj
@@ -11,6 +11,7 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="1.1.2" />
     <PackageReference Include="Microsoft.Web.Xdt" Version="2.1.1" />
     <PackageReference Include="NuGet.Core" Version="2.14.0" />
   </ItemGroup>
@@ -19,5 +20,6 @@
     <ProjectReference Include="..\..\ClusterKit.Data\ClusterKit.Data.EF\ClusterKit.Data.EF.csproj" />
     <ProjectReference Include="..\..\ClusterKit.Data\ClusterKit.Data\ClusterKit.Data.csproj" />
     <ProjectReference Include="..\ClusterKit.NodeManager.Client\ClusterKit.NodeManager.Client.csproj" />
+    <ProjectReference Include="..\ClusterKit.NodeManager.Migrator.EF\ClusterKit.NodeManager.Migrator.EF.csproj" />
   </ItemGroup>
 </Project>
