--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Launcher.Utils/ClusterKit.NodeManager.Launcher.Utils.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Launcher.Utils/ClusterKit.NodeManager.Launcher.Utils.csproj
@@ -1,18 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net46</TargetFrameworks>
-    <PackageId>ClusterKit.NodeManager.ConfigurationSource.Seeder</PackageId>
+    <PackageId>ClusterKit.NodeManager.Launcher.Utils</PackageId>
     <Version>0.0.0.0-local</Version>
     <Authors>ClusterKit</Authors>
     <Description>Bundle of utils to create scalable and redundant services</Description>
     <Company>Mikhail Kantarovskiy and ClusterKit contributors</Company>
     <Product>ClusterKit</Product>
     <Copyright>Copyright ©Mikhail Kantarovskiy and ClusterKit contributors 2017</Copyright>
+    <ApplicationIcon />
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\ClusterKit.Monitoring\ClusterKit.Monitoring.Client\ClusterKit.Monitoring.Client.csproj" />
-    <ProjectReference Include="..\..\ClusterKit.Web\ClusterKit.Web.Swagger.Messages\ClusterKit.Web.Swagger.Messages.csproj" />
-    <ProjectReference Include="..\ClusterKit.NodeManager.ConfigurationSource\ClusterKit.NodeManager.ConfigurationSource.csproj" />
+    <PackageReference Include="NuGet.Protocol.Core.v3" Version="4.0.0" />
   </ItemGroup>
 </Project>
