--- a/Docker/ClusterKitManager/fallBackConfiguration.json
+++ b/Docker/ClusterKitManager/fallBackConfiguration.json
@@ -1,5 +1,5 @@
 {
-  "Configuration": "{\n       ClusterKit {\n        NodeManager.ConfigurationDatabaseConnectionString = \"User ID=postgres;Host=configDb;Port=5432;Pooling=true\"\nNodeManager.DefaultNugetFeeds {\n              publicFeed {\n                      address = \"/opt/packageCache\"\n                      type = public\n              } \n              privateFeed {\n                      address = \"http://nuget/\"\n                      type = private\n              }          \n          }  \n        Web {\n          Swagger.Publish {\n              publishDocPath = \"clusterkit/manager/swagger/doc\"\n              publishUiPath = \"clusterkit/manager/swagger/ui\"\n          }\n          Services {\n            ClusterKit/Web/Swagger { // ServiceName is just unique service identification, used in order to handle stacked config properly. It is used just localy on node\n              Port = 8080 // default owin port, current node listening port for server access\n              PublicHostName = default //public host name of this service. It doesn't supposed (but is not prohibited) that this should be real public service hostname. It's just used to distinguish services with identical url paths to be correctly published on frontend web servers. Real expected hostname should be configured in NginxConfigurator or similar publisher\n              Route = /clusterkit/manager/swagger //route (aka directory) path to service\n            }\n          }\n        }\n      }\n    }",
+  "Configuration": "{\n       ClusterKit {\n        NodeManager.ConfigurationDatabaseConnectionString = \"User ID=postgres;Host=configDb;Port=5432;Pooling=true\"\nNodeManager.ConfigurationDatabaseProviderName = \"Npgsql\"\nNodeManager.DefaultNugetFeeds {\n              publicFeed {\n                      address = \"/opt/packageCache\"\n                      type = public\n              } \n              privateFeed {\n                      address = \"http://nuget/\"\n                      type = private\n              }          \n          }  \n        Web {\n          Swagger.Publish {\n              publishDocPath = \"clusterkit/manager/swagger/doc\"\n              publishUiPath = \"clusterkit/manager/swagger/ui\"\n          }\n          Services {\n            ClusterKit/Web/Swagger { // ServiceName is just unique service identification, used in order to handle stacked config properly. It is used just localy on node\n              Port = 8080 // default owin port, current node listening port for server access\n              PublicHostName = default //public host name of this service. It doesn't supposed (but is not prohibited) that this should be real public service hostname. It's just used to distinguish services with identical url paths to be correctly published on frontend web servers. Real expected hostname should be configured in NginxConfigurator or similar publisher\n              Route = /clusterkit/manager/swagger //route (aka directory) path to service\n            }\n          }\n        }\n      }\n    }",
   "NodeTemplate": "clusterManager",
   "ReleaseId": 1,
   "Packages": [
@@ -140,6 +140,10 @@
       "Version": "0.0.0-local"
     },
     {
+      "Id": "ClusterKit.NodeManager.Migrator.EF",
+      "Version": "0.0.0-local"
+    },
+    {
       "Id": "ClusterKit.Security.Attributes",
       "Version": "0.0.0-local"
     },
@@ -224,14 +228,6 @@
       "Version": "2.4.2"
     },
     {
-      "Id": "EntityFramework",
-      "Version": "6.1.3"
-    },
-    {
-      "Id": "EntityFramework6.Npgsql",
-      "Version": "3.1.1"
-    },
-    {
       "Id": "Google.ProtocolBuffers",
       "Version": "2.4.1.555"
     },
@@ -276,6 +272,38 @@
       "Version": "5.2.3"
     },
     {
+      "Id": "Microsoft.Bcl",
+      "Version": "1.1.9"
+    },
+    {
+      "Id": "Microsoft.Bcl.Build",
+      "Version": "1.0.14"
+    },
+    {
+      "Id": "Microsoft.CSharp",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "Microsoft.EntityFrameworkCore",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.EntityFrameworkCore.Relational",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.Extensions.Caching.Abstractions",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.Extensions.Caching.Memory",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.Extensions.DependencyInjection",
+      "Version": "1.1.0"
+    },
+    {
       "Id": "Microsoft.Extensions.DependencyInjection.Abstractions",
       "Version": "1.1.0"
     },
@@ -288,7 +316,23 @@
       "Version": "1.1.1"
     },
     {
+      "Id": "Microsoft.Extensions.Options",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.Extensions.Primitives",
+      "Version": "1.1.0"
+    },
+    {
+      "Id": "Microsoft.Net.Http",
+      "Version": "2.2.22"
+    },
+    {
       "Id": "Microsoft.NETCore.Platforms",
+      "Version": "1.1.0"
+    },
+    {
+      "Id": "Microsoft.NETCore.Targets",
       "Version": "1.1.0"
     },
     {
@@ -317,7 +361,7 @@
     },
     {
       "Id": "Microsoft.Web.Xdt",
-      "Version": "2.1.0"
+      "Version": "2.1.1"
     },
     {
       "Id": "Microsoft.Win32.Primitives",
@@ -333,7 +377,11 @@
     },
     {
       "Id": "Npgsql",
-      "Version": "3.1.0"
+      "Version": "3.1.9"
+    },
+    {
+      "Id": "Npgsql.EntityFrameworkCore.PostgreSQL",
+      "Version": "1.1.0"
     },
     {
       "Id": "NuGet.Core",
@@ -342,6 +390,78 @@
     {
       "Id": "Owin",
       "Version": "1.0"
+    },
+    {
+      "Id": "Remotion.Linq",
+      "Version": "2.1.1"
+    },
+    {
+      "Id": "runtime.debian.8-x64.runtime.native.System.Security.Cryptography.OpenSsl",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.fedora.23-x64.runtime.native.System.Security.Cryptography.OpenSsl",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.fedora.24-x64.runtime.native.System.Security.Cryptography.OpenSsl",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.native.System",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.native.System.IO.Compression",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.native.System.Net.Http",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.native.System.Net.Security",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.native.System.Security.Cryptography.Apple",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.native.System.Security.Cryptography.OpenSsl",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.opensuse.13.2-x64.runtime.native.System.Security.Cryptography.OpenSsl",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.opensuse.42.1-x64.runtime.native.System.Security.Cryptography.OpenSsl",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.osx.10.10-x64.runtime.native.System.Security.Cryptography.Apple",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.osx.10.10-x64.runtime.native.System.Security.Cryptography.OpenSsl",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.rhel.7-x64.runtime.native.System.Security.Cryptography.OpenSsl",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.ubuntu.14.04-x64.runtime.native.System.Security.Cryptography.OpenSsl",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.ubuntu.16.04-x64.runtime.native.System.Security.Cryptography.OpenSsl",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.ubuntu.16.10-x64.runtime.native.System.Security.Cryptography.OpenSsl",
+      "Version": "4.3.0"
     },
     {
       "Id": "Serilog",
@@ -380,6 +500,10 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Buffers",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.Collections",
       "Version": "4.3.0"
     },
@@ -392,11 +516,39 @@
       "Version": "1.3.1"
     },
     {
+      "Id": "System.Collections.NonGeneric",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Collections.Specialized",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.ComponentModel",
       "Version": "4.3.0"
     },
     {
+      "Id": "System.ComponentModel.Annotations",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.ComponentModel.Primitives",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.ComponentModel.TypeConverter",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.Console",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Data.Common",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Diagnostics.Contracts",
       "Version": "4.3.0"
     },
     {
@@ -405,6 +557,10 @@
     },
     {
       "Id": "System.Diagnostics.DiagnosticSource",
+      "Version": "4.3.1"
+    },
+    {
+      "Id": "System.Diagnostics.StackTrace",
       "Version": "4.3.0"
     },
     {
@@ -416,12 +572,24 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Dynamic.Runtime",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.Globalization",
       "Version": "4.3.0"
     },
     {
       "Id": "System.Globalization.Calendars",
       "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Globalization.Extensions",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Interactive.Async",
+      "Version": "3.0.0"
     },
     {
       "Id": "System.IO",
@@ -452,11 +620,27 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Linq.Queryable",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.Net.Http",
       "Version": "4.3.2"
     },
     {
+      "Id": "System.Net.NameResolution",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Net.NetworkInformation",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.Net.Primitives",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Net.Security",
       "Version": "4.3.0"
     },
     {
@@ -472,11 +656,31 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Reflection.Emit",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Reflection.Emit.ILGeneration",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Reflection.Emit.Lightweight",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.Reflection.Extensions",
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Reflection.Metadata",
+      "Version": "1.4.1"
+    },
+    {
       "Id": "System.Reflection.Primitives",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Reflection.TypeExtensions",
       "Version": "4.3.0"
     },
     {
@@ -485,6 +689,10 @@
     },
     {
       "Id": "System.Runtime",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Runtime.CompilerServices.Unsafe",
       "Version": "4.3.0"
     },
     {
@@ -504,7 +712,27 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Runtime.InteropServices.WindowsRuntime",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.Runtime.Numerics",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Runtime.Serialization.Formatters",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Runtime.Serialization.Primitives",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Runtime.WindowsRuntime",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Security.Claims",
       "Version": "4.3.0"
     },
     {
@@ -512,7 +740,19 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Security.Cryptography.Cng",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Security.Cryptography.Csp",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.Security.Cryptography.Encoding",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Security.Cryptography.OpenSsl",
       "Version": "4.3.0"
     },
     {
@@ -521,6 +761,14 @@
     },
     {
       "Id": "System.Security.Cryptography.X509Certificates",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Security.Principal",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Security.Principal.Windows",
       "Version": "4.3.0"
     },
     {
@@ -540,7 +788,23 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Threading.Overlapped",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.Threading.Tasks",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Threading.Tasks.Extensions",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Threading.Thread",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Threading.ThreadPool",
       "Version": "4.3.0"
     },
     {
@@ -553,6 +817,10 @@
     },
     {
       "Id": "System.Xml.XDocument",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Xml.XmlDocument",
       "Version": "4.3.0"
     }
   ],
