--- a/Docker/ClusterKitPublisher/fallBackConfiguration.json
+++ b/Docker/ClusterKitPublisher/fallBackConfiguration.json
@@ -156,10 +156,6 @@
       "Version": "2.4.2"
     },
     {
-      "Id": "EntityFramework",
-      "Version": "6.1.3"
-    },
-    {
       "Id": "Google.ProtocolBuffers",
       "Version": "2.4.1.555"
     },
@@ -170,6 +166,26 @@
     {
       "Id": "JetBrains.Annotations",
       "Version": "10.4.0"
+    },
+    {
+      "Id": "Microsoft.CSharp",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "Microsoft.EntityFrameworkCore",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.Extensions.Caching.Abstractions",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.Extensions.Caching.Memory",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.Extensions.DependencyInjection",
+      "Version": "1.1.0"
     },
     {
       "Id": "Microsoft.Extensions.DependencyInjection.Abstractions",
@@ -184,7 +200,19 @@
       "Version": "1.1.1"
     },
     {
+      "Id": "Microsoft.Extensions.Options",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.Extensions.Primitives",
+      "Version": "1.1.0"
+    },
+    {
       "Id": "Microsoft.NETCore.Platforms",
+      "Version": "1.1.0"
+    },
+    {
+      "Id": "Microsoft.NETCore.Targets",
       "Version": "1.1.0"
     },
     {
@@ -198,6 +226,78 @@
     {
       "Id": "Newtonsoft.Json",
       "Version": "10.0.2"
+    },
+    {
+      "Id": "Remotion.Linq",
+      "Version": "2.1.1"
+    },
+    {
+      "Id": "runtime.debian.8-x64.runtime.native.System.Security.Cryptography.OpenSsl",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.fedora.23-x64.runtime.native.System.Security.Cryptography.OpenSsl",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.fedora.24-x64.runtime.native.System.Security.Cryptography.OpenSsl",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.native.System",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.native.System.IO.Compression",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.native.System.Net.Http",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.native.System.Net.Security",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.native.System.Security.Cryptography.Apple",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.native.System.Security.Cryptography.OpenSsl",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.opensuse.13.2-x64.runtime.native.System.Security.Cryptography.OpenSsl",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.opensuse.42.1-x64.runtime.native.System.Security.Cryptography.OpenSsl",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.osx.10.10-x64.runtime.native.System.Security.Cryptography.Apple",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.osx.10.10-x64.runtime.native.System.Security.Cryptography.OpenSsl",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.rhel.7-x64.runtime.native.System.Security.Cryptography.OpenSsl",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.ubuntu.14.04-x64.runtime.native.System.Security.Cryptography.OpenSsl",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.ubuntu.16.04-x64.runtime.native.System.Security.Cryptography.OpenSsl",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "runtime.ubuntu.16.10-x64.runtime.native.System.Security.Cryptography.OpenSsl",
+      "Version": "4.3.0"
     },
     {
       "Id": "Serilog",
@@ -228,6 +328,10 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Buffers",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.Collections",
       "Version": "4.3.0"
     },
@@ -240,11 +344,35 @@
       "Version": "1.3.1"
     },
     {
+      "Id": "System.Collections.NonGeneric",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Collections.Specialized",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.ComponentModel",
       "Version": "4.3.0"
     },
     {
+      "Id": "System.ComponentModel.Annotations",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.ComponentModel.Primitives",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.ComponentModel.TypeConverter",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.Console",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Diagnostics.Contracts",
       "Version": "4.3.0"
     },
     {
@@ -253,6 +381,10 @@
     },
     {
       "Id": "System.Diagnostics.DiagnosticSource",
+      "Version": "4.3.1"
+    },
+    {
+      "Id": "System.Diagnostics.StackTrace",
       "Version": "4.3.0"
     },
     {
@@ -264,12 +396,24 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Dynamic.Runtime",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.Globalization",
       "Version": "4.3.0"
     },
     {
       "Id": "System.Globalization.Calendars",
       "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Globalization.Extensions",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Interactive.Async",
+      "Version": "3.0.0"
     },
     {
       "Id": "System.IO",
@@ -300,11 +444,27 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Linq.Queryable",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.Net.Http",
       "Version": "4.3.2"
     },
     {
+      "Id": "System.Net.NameResolution",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Net.NetworkInformation",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.Net.Primitives",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Net.Security",
       "Version": "4.3.0"
     },
     {
@@ -320,11 +480,31 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Reflection.Emit",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Reflection.Emit.ILGeneration",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Reflection.Emit.Lightweight",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.Reflection.Extensions",
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Reflection.Metadata",
+      "Version": "1.4.1"
+    },
+    {
       "Id": "System.Reflection.Primitives",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Reflection.TypeExtensions",
       "Version": "4.3.0"
     },
     {
@@ -333,6 +513,10 @@
     },
     {
       "Id": "System.Runtime",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Runtime.CompilerServices.Unsafe",
       "Version": "4.3.0"
     },
     {
@@ -352,7 +536,27 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Runtime.InteropServices.WindowsRuntime",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.Runtime.Numerics",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Runtime.Serialization.Formatters",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Runtime.Serialization.Primitives",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Runtime.WindowsRuntime",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Security.Claims",
       "Version": "4.3.0"
     },
     {
@@ -360,7 +564,19 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Security.Cryptography.Cng",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Security.Cryptography.Csp",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.Security.Cryptography.Encoding",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Security.Cryptography.OpenSsl",
       "Version": "4.3.0"
     },
     {
@@ -369,6 +585,14 @@
     },
     {
       "Id": "System.Security.Cryptography.X509Certificates",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Security.Principal",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Security.Principal.Windows",
       "Version": "4.3.0"
     },
     {
@@ -388,7 +612,23 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Threading.Overlapped",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.Threading.Tasks",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Threading.Tasks.Extensions",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Threading.Thread",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Threading.ThreadPool",
       "Version": "4.3.0"
     },
     {
@@ -401,6 +641,10 @@
     },
     {
       "Id": "System.Xml.XDocument",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Xml.XmlDocument",
       "Version": "4.3.0"
     }
   ],
