--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/ClusterKit.NodeManager.Tests.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/ClusterKit.NodeManager.Tests.csproj
@@ -11,7 +11,8 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Remove="TempTest.cs" />
+    <Compile Remove="MigratorTests.cs" />
+    <Compile Remove="ReleaseCheckTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.TestPlatform.ObjectModel" Version="15.0.0" />
@@ -24,6 +25,7 @@
     <ProjectReference Include="..\..\ClusterKit.Data\ClusterKit.Data.EF.InMemory\ClusterKit.Data.EF.InMemory.csproj" />
     <ProjectReference Include="..\..\ClusterKit.Data\ClusterKit.Data.EF.Npgsql\ClusterKit.Data.EF.Npgsql.csproj" />
     <ProjectReference Include="..\..\ClusterKit.Web\ClusterKit.Web.GraphQL.Publisher\ClusterKit.Web.GraphQL.Publisher.csproj" />
+    <ProjectReference Include="..\ClusterKit.NodeManager.ConfigurationSource.Seeder\ClusterKit.NodeManager.ConfigurationSource.Seeder.csproj" />
     <ProjectReference Include="..\ClusterKit.NodeManager\ClusterKit.NodeManager.csproj" />
   </ItemGroup>
 </Project>
