--- a/ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj
+++ b/ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj
@@ -15,14 +15,13 @@
     <PackageReference Include="Akka.Cluster" Version="1.2.0" />
     <PackageReference Include="Akka.Cluster.Sharding" Version="1.2.0.36-beta" />
     <PackageReference Include="Akka.Cluster.Tools" Version="1.2.0" />
-    <PackageReference Include="Akka.DI.CastleWindsor" Version="1.0.8" />
+    <PackageReference Include="Akka.DI.AutoFac" Version="1.0.8" />
     <PackageReference Include="Akka.DI.Core" Version="1.2.0" />
     <PackageReference Include="Akka.Logger.Serilog" Version="1.2.0" />
     <PackageReference Include="Akka.Remote" Version="1.2.0" />
     <PackageReference Include="Akka.Serialization.Hyperion" Version="1.2.0.36-beta" />
-    <PackageReference Include="Castle.Windsor" Version="3.4.0" />
+    <PackageReference Include="Autofac.Extras.CommonServiceLocator" Version="4.0.0" />
     <PackageReference Include="CommonServiceLocator" Version="1.3.0" />
-    <PackageReference Include="CommonServiceLocator.WindsorAdapter" Version="1.0.0" />
     <PackageReference Include="JetBrains.Annotations" Version="10.4.0" />
     <PackageReference Include="Serilog" Version="2.4.0" />
   </ItemGroup>
