--- a/ClusterKit.Web/ClusterKit.Web/ClusterKit.Web.csproj
+++ b/ClusterKit.Web/ClusterKit.Web/ClusterKit.Web.csproj
@@ -11,6 +11,8 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Autofac.Owin" Version="4.0.0" />
+    <PackageReference Include="Autofac.WebApi2.Owin" Version="4.0.0" />
     <PackageReference Include="Microsoft.AspNet.WebApi.OwinSelfHost" Version="5.2.3" />
     <PackageReference Include="Microsoft.Owin.Hosting" Version="3.0.1" />
   </ItemGroup>
