--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Migrator/ClusterKit.NodeManager.Migrator.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Migrator/ClusterKit.NodeManager.Migrator.csproj
@@ -10,4 +10,5 @@
     <Copyright>Copyright ©Mikhail Kantarovskiy and ClusterKit contributors 2017</Copyright>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net46|x64'" />
 </Project>
