--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.FallbackPackageFixer/ClusterKit.NodeManager.FallbackPackageFixer.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.FallbackPackageFixer/ClusterKit.NodeManager.FallbackPackageFixer.csproj
@@ -15,6 +15,7 @@
     <StartupObject />
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net46|x64'" />
   <ItemGroup>
     <PackageReference Include="NuGet.Packaging" Version="4.0.0" />
     <PackageReference Include="NuGet.Protocol.Core.Types" Version="4.0.0" />
