--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Launcher.Utils/ClusterKit.NodeManager.Launcher.Utils.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Launcher.Utils/ClusterKit.NodeManager.Launcher.Utils.csproj
@@ -11,6 +11,7 @@
     <ApplicationIcon />
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net46|x64'" />
   <ItemGroup>
     <PackageReference Include="NuGet.Protocol.Core.v3" Version="4.0.0" />
   </ItemGroup>
