--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Seeder/ClusterKit.NodeManager.Seeder.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Seeder/ClusterKit.NodeManager.Seeder.csproj
@@ -15,6 +15,7 @@
     <StartupObject />
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net46|x64'" />
   <ItemGroup>
     <ProjectReference Include="..\..\ClusterKit.Core\ClusterKit.Core\ClusterKit.Core.csproj" />
     <ProjectReference Include="..\ClusterKit.NodeManager.Migrator\ClusterKit.NodeManager.Migrator.csproj" />
