--- a/ClusterKit.Security/ClusterKit.Security.SessionRedis/ClusterKit.Security.SessionRedis.csproj
+++ b/ClusterKit.Security/ClusterKit.Security.SessionRedis/ClusterKit.Security.SessionRedis.csproj
@@ -10,6 +10,7 @@
     <Copyright>Copyright ©Mikhail Kantarovskiy and ClusterKit contributors 2017</Copyright>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net46|x64'" />
   <ItemGroup>
     <PackageReference Include="StackExchange.Redis" Version="1.2.3" />
   </ItemGroup>
