--- a/ClusterKit.Web/ClusterKit.Web.Authentication/ClusterKit.Web.Authentication.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.Authentication/ClusterKit.Web.Authentication.csproj
@@ -10,6 +10,7 @@
     <Copyright>Copyright ©Mikhail Kantarovskiy and ClusterKit contributors 2017</Copyright>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net46|x64'" />
   <ItemGroup>
     <ProjectReference Include="..\ClusterKit.Web.Authorization\ClusterKit.Web.Authorization.csproj" />
     <ProjectReference Include="..\ClusterKit.Web\ClusterKit.Web.csproj" />
