--- a/ClusterKit.Web/ClusterKit.Web.Tests/ClusterKit.Web.Tests.csproj
+++ b/ClusterKit.Web/ClusterKit.Web.Tests/ClusterKit.Web.Tests.csproj
@@ -1,33 +1,47 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <Import Project="..\..\common.props" />
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net46|x64'" />
   <PropertyGroup Condition="'$(Platform)'=='x64'">
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp1.1;net46</TargetFrameworks>
+    <TargetFrameworks>net46;netcoreapp1.1</TargetFrameworks>
     <PackageId>ClusterKit.Web.Tests</PackageId>
     <Version>0.0.0.0-local</Version>
-    <Authors>ClusterKit</Authors>
-    <Description>Bundle of utils to create scalable and redundant services</Description>
-    <Company>Mikhail Kantarovskiy and ClusterKit contributors</Company>
-    <Product>ClusterKit</Product>
-    <Copyright>Copyright ©Mikhail Kantarovskiy and ClusterKit contributors 2017</Copyright>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NetStandardImplicitPackageVersion Condition=" '$(TargetFramework)' == 'netcoreapp1.1' ">1.6.1</NetStandardImplicitPackageVersion>
+    <PackageTargetFallback Condition=" '$(TargetFramework)' == 'netcoreapp1.1' ">$(PackageTargetFallback);portable-net45+win8</PackageTargetFallback>
 
+<!--
     <RuntimeIdentifier Condition="'$(PlatformTarget)' == 'x64' and '$(TargetFramework)' == 'net46'">win7-x64</RuntimeIdentifier>
     <RuntimeIdentifier Condition="'$(PlatformTarget)' == 'x86' and '$(TargetFramework)' == 'net46'">win7-x86</RuntimeIdentifier>
     <RuntimeIdentifier Condition="'$(PlatformTarget)' == '' and '$(TargetFramework)' == 'net46'">win7-x86</RuntimeIdentifier>
+  
+-->
 
   </PropertyGroup>
+
   <ItemGroup>
-    <PackageReference Include="CommonServiceLocator" Version="1.3.0" />
-    <PackageReference Include="Libuv" Version="1.9.2" />
-    <PackageReference Include="Microsoft.AspNet.Cors" Version="5.2.3" />
-    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.2.3" />
-    <PackageReference Include="RestSharp" Version="105.2.3" />
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
+    <None Remove="GraphQL\Resources\IntrospectionQuery.txt" />
+    <None Remove="GraphQL\Resources\SchemaDescriptionTestSnapshot.txt" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Libuv" Version="1.9.2" />    
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.0.0" />
+    <PackageReference Include="xunit" Version="$(XunitVersion)" />
+    <DotNetCliToolReference Include="dotnet-xunit" Version="$(XunitVersion)" />
+    <EmbeddedResource Include="GraphQL\Resources\IntrospectionQuery.txt" />
+    <EmbeddedResource Include="GraphQL\Resources\SchemaDescriptionTestSnapshot.txt" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="$(XunitVersion)" />    
+  </ItemGroup>
+  <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp1.1' ">
+    <PackageReference Include="RestSharp.NetCore" Version="105.2.3" />
+  </ItemGroup>
+  <ItemGroup Condition=" '$(TargetFramework)' == 'net46' ">
+    <PackageReference Include="RestSharp" Version="105.2.3" />
+  </ItemGroup>  
+
   <ItemGroup>
     <ProjectReference Include="..\..\ClusterKit.API\ClusterKit.API.Attributes\ClusterKit.API.Attributes.csproj" />
     <ProjectReference Include="..\..\ClusterKit.API\ClusterKit.API.Client\ClusterKit.API.Client.csproj" />
@@ -44,7 +58,17 @@
     <ProjectReference Include="..\ClusterKit.Web.NginxConfigurator\ClusterKit.Web.NginxConfigurator.csproj" />
     <ProjectReference Include="..\ClusterKit.Web\ClusterKit.Web.csproj" />
   </ItemGroup>
-  <ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net46'">
     <Reference Include="System.Configuration" />
   </ItemGroup>
+  
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'net46' ">
+    <DefineConstants>$(DefineConstants);APPDOMAIN</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(TargetFramework)' == 'netcoreapp1.1' ">
+    <DefineConstants>$(DefineConstants);CORECLR</DefineConstants>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+    <DefineConstants>$(DefineConstants);RELEASE</DefineConstants>
+  </PropertyGroup>  
 </Project>
