--- a/ClusterKit.Web/ClusterKit.Web.Tests/App.config
+++ b/ClusterKit.Web/ClusterKit.Web.Tests/App.config
@@ -7,8 +7,8 @@
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <!--
       <dependentAssembly>
-        <assemblyIdentity name="System.Net.Http" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.1.1.1" newVersion="4.1.1.1" />
+        <assemblyIdentity name="Microsoft.VisualStudio.TestPlatform.ObjectModel" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0-15.0.0" newVersion="15.0.0" />
       </dependentAssembly>
      -->
     </assemblyBinding>
