NetCore2: Docker reconfiguration - Part I

--- a/Docker/ClusterKitPublisher/Dockerfile
+++ b/Docker/ClusterKitPublisher/Dockerfile
@@ -2,11 +2,11 @@ FROM clusterkit/baseweb:latest
 MAINTAINER Mikhail Kantarovskiy <kantoramob@gmail.com>
 EXPOSE 3090
 WORKDIR /opt/clusterkit/
-COPY build/* /opt/clusterkit/
-COPY packageCache/* /opt/packageCache/
-COPY ["fallBackConfiguration.json", "ClusterKit.NodeManager.Launcher.exe.config", "./"]
+COPY build/ /opt/clusterkit/
+COPY packageCache/ /opt/packageCache/
+COPY ["fallBackConfiguration.json", "config.hocon", "./"]
 
 RUN rm /etc/nginx/sites-enabled/default
 RUN chmod 777 nuget.exe
-CMD /etc/init.d/nginx start && mono ClusterKit.NodeManager.Launcher.exe
+CMD /etc/init.d/nginx start && dotnet ClusterKit.NodeManager.Launcher.dll
 
