--- a/Docker/ClusterKitSeed/Dockerfile
+++ b/Docker/ClusterKitSeed/Dockerfile
@@ -2,7 +2,7 @@ FROM clusterkit/baseworker:latest
 MAINTAINER Mikhail Kantarovskiy <kantoramob@gmail.com>
 EXPOSE 3090
 WORKDIR /opt/clusterkit/
-COPY build/* /opt/clusterkit/
+COPY build/ /opt/clusterkit/
 COPY akka.hocon /opt/clusterkit/
-CMD mono ClusterKit.Core.Service.exe
+CMD dotnet ClusterKit.Core.Service.dll
 
