--- a/Docker/ClusterKitWorker/Dockerfile
+++ b/Docker/ClusterKitWorker/Dockerfile
@@ -1,8 +1,8 @@
 FROM clusterkit/baseworker:latest
 MAINTAINER Mikhail Kantarovskiy <kantoramob@gmail.com>
 WORKDIR /opt/clusterkit/
-COPY build/* /opt/clusterkit/
-COPY packageCache/* /opt/packageCache/
+COPY build/ /opt/clusterkit/
+COPY packageCache/ /opt/packageCache/
 COPY ["ClusterKit.NodeManager.Launcher.exe.config", "./"]
 RUN chmod 777 nuget.exe
 CMD bash ./start.sh
