--- a/Docker/ClusterKitManager/Dockerfile
+++ b/Docker/ClusterKitManager/Dockerfile
@@ -1,4 +1,4 @@
 FROM clusterkit/worker:latest
 MAINTAINER Mikhail Kantarovskiy <kantoramob@gmail.com>
-COPY ["fallBackConfiguration.json", "ClusterKit.NodeManager.Launcher.exe.config", "./"]
+COPY ["fallBackConfiguration.json", "config.hocon", "./"]
 CMD bash ./start.sh
