--- a/Docker/ClusterKitPublisher/fallBackConfiguration.json
+++ b/Docker/ClusterKitPublisher/fallBackConfiguration.json
@@ -1,59 +1,55 @@
 {
-  "Configuration": "{\n   ClusterKit {\n     Web {\n       Nginx {\n         PathToConfig = \"/etc/nginx/sites-enabled/clusterkit.config\"\n         ReloadCommand {\n           Command = /etc/init.d/nginx\n           Arguments = reload\n         } \n         Configuration {\n           default {\n             \"location /clusterkit\" { \n               proxy_pass = \"http://monitoringUI/clusterkit\"\n             }\n           }\n         }\n       }\n     }\n   }\n \n   akka {\n     remote {\n       helios {\n         tcp {\n           hostname = 0.0.0.0\n           port = 0\n         }\n       }\n     }\n     cluster {\n       seed-nodes = []\n     }\n   }\n }\n",
+  "Configuration": "{\n   ClusterKit {\n     Web {\n       Nginx {\n         PathToConfig = \"/etc/nginx/sites-enabled/clusterkit.config\"\n         ReloadCommand {\n           Command = /etc/init.d/nginx\n           Arguments = reload\n         } \n         Configuration {\n           default {\n             \"location /clusterkit\" { \n               proxy_pass = \"http://monitoringUI/clusterkit\"\n             }\n           }\n         }\n       }\n     }\n   }\n}",
   "NodeTemplate": "publisher",
   "ReleaseId": 1,
   "Packages": [
     {
       "Id": "Akka",
-      "Version": "1.2.0"
+      "Version": "1.3.0"
     },
     {
       "Id": "Akka.Cluster",
-      "Version": "1.2.0"
+      "Version": "1.3.0"
     },
     {
       "Id": "Akka.Cluster.Sharding",
-      "Version": "1.2.0.36-beta"
+      "Version": "1.3.0-beta"
     },
     {
       "Id": "Akka.Cluster.Tools",
-      "Version": "1.2.0"
+      "Version": "1.3.0"
     },
     {
-      "Id": "Akka.DI.CastleWindsor",
-      "Version": "1.0.8"
+      "Id": "Akka.DI.AutoFac",
+      "Version": "1.3.0"
     },
     {
       "Id": "Akka.DI.Core",
-      "Version": "1.2.0"
+      "Version": "1.3.0"
     },
     {
       "Id": "Akka.Logger.Serilog",
-      "Version": "1.2.0"
+      "Version": "1.3.0"
     },
     {
       "Id": "Akka.Persistence",
-      "Version": "1.2.0.36-beta"
+      "Version": "1.3.0-beta"
     },
     {
       "Id": "Akka.Remote",
-      "Version": "1.2.0"
+      "Version": "1.3.0"
     },
     {
       "Id": "Akka.Serialization.Hyperion",
-      "Version": "1.2.0.36-beta"
+      "Version": "1.3.0-beta"
     },
     {
-      "Id": "BCrypt-Official",
-      "Version": "0.1.109"
+      "Id": "Autofac",
+      "Version": "4.6.0"
     },
     {
-      "Id": "Castle.Core",
-      "Version": "3.3.0"
-    },
-    {
-      "Id": "Castle.Windsor",
-      "Version": "3.4.0"
+      "Id": "BCrypt.Net-Next",
+      "Version": "2.1.1"
     },
     {
       "Id": "ClusterKit.API.Attributes",
@@ -120,14 +116,6 @@
       "Version": "0.0.0-local"
     },
     {
-      "Id": "CommonServiceLocator",
-      "Version": "1.3"
-    },
-    {
-      "Id": "CommonServiceLocator.WindsorAdapter",
-      "Version": "1.0"
-    },
-    {
       "Id": "docopt.net",
       "Version": "0.6.1.9"
     },
@@ -156,20 +144,52 @@
       "Version": "2.4.2"
     },
     {
+      "Id": "Google.Protobuf",
+      "Version": "3.3.0"
+    },
+    {
       "Id": "Google.ProtocolBuffers",
       "Version": "2.4.1.555"
     },
     {
       "Id": "Hyperion",
-      "Version": "0.9.2"
+      "Version": "0.9.5"
     },
     {
       "Id": "JetBrains.Annotations",
       "Version": "10.4.0"
     },
     {
+      "Id": "Libuv",
+      "Version": "1.9.2"
+    },
+    {
+      "Id": "Microsoft.CodeAnalysis.Analyzers",
+      "Version": "1.1.0"
+    },
+    {
+      "Id": "Microsoft.CodeAnalysis.Common",
+      "Version": "1.3.0"
+    },
+    {
+      "Id": "Microsoft.CodeAnalysis.CSharp",
+      "Version": "1.3.0"
+    },
+    {
+      "Id": "Microsoft.CodeAnalysis.VisualBasic",
+      "Version": "1.3.0"
+    },
+    {
       "Id": "Microsoft.CSharp",
       "Version": "4.3.0"
+    },
+    {
+      "Id": "Microsoft.DiaSymReader.Native",
+      "Version": "1.4.1"
+    },
+    {
+      "Id": "Microsoft.DotNet.PlatformAbstractions",
+      "Version": "1.1.2"
     },
     {
       "Id": "Microsoft.EntityFrameworkCore",
@@ -185,38 +205,86 @@
     },
     {
       "Id": "Microsoft.Extensions.DependencyInjection",
-      "Version": "1.1.0"
+      "Version": "1.1.1"
     },
     {
       "Id": "Microsoft.Extensions.DependencyInjection.Abstractions",
-      "Version": "1.1.0"
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.Extensions.DependencyModel",
+      "Version": "1.1.2"
     },
     {
       "Id": "Microsoft.Extensions.Logging",
-      "Version": "1.1.1"
+      "Version": "1.1.2"
     },
     {
       "Id": "Microsoft.Extensions.Logging.Abstractions",
-      "Version": "1.1.1"
+      "Version": "1.1.2"
     },
     {
       "Id": "Microsoft.Extensions.Options",
-      "Version": "1.1.1"
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.Extensions.PlatformAbstractions",
+      "Version": "1.1.0"
     },
     {
       "Id": "Microsoft.Extensions.Primitives",
+      "Version": "1.1.1"
+    },
+    {
+      "Id": "Microsoft.NETCore.App",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.NETCore.DotNetHost",
       "Version": "1.1.0"
+    },
+    {
+      "Id": "Microsoft.NETCore.DotNetHostPolicy",
+      "Version": "1.1.2"
+    },
+    {
+      "Id": "Microsoft.NETCore.DotNetHostResolver",
+      "Version": "1.1.0"
+    },
+    {
+      "Id": "Microsoft.NETCore.Jit",
+      "Version": "1.1.2"
     },
     {
       "Id": "Microsoft.NETCore.Platforms",
       "Version": "1.1.0"
     },
     {
+      "Id": "Microsoft.NETCore.Portable.Compatibility",
+      "Version": "1.0.1"
+    },
+    {
+      "Id": "Microsoft.NETCore.Runtime.CoreCLR",
+      "Version": "1.1.2"
+    },
+    {
       "Id": "Microsoft.NETCore.Targets",
       "Version": "1.1.0"
     },
     {
+      "Id": "Microsoft.NETCore.Windows.ApiSets",
+      "Version": "1.0.1"
+    },
+    {
+      "Id": "Microsoft.VisualBasic",
+      "Version": "10.1.0"
+    },
+    {
       "Id": "Microsoft.Win32.Primitives",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "Microsoft.Win32.Registry",
       "Version": "4.3.0"
     },
     {
@@ -233,15 +301,15 @@
     },
     {
       "Id": "runtime.debian.8-x64.runtime.native.System.Security.Cryptography.OpenSsl",
-      "Version": "4.3.0"
+      "Version": "4.3.1"
     },
     {
       "Id": "runtime.fedora.23-x64.runtime.native.System.Security.Cryptography.OpenSsl",
-      "Version": "4.3.0"
+      "Version": "4.3.1"
     },
     {
       "Id": "runtime.fedora.24-x64.runtime.native.System.Security.Cryptography.OpenSsl",
-      "Version": "4.3.0"
+      "Version": "4.3.1"
     },
     {
       "Id": "runtime.native.System",
@@ -260,20 +328,24 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "runtime.native.System.Security.Cryptography",
+      "Version": "4.0.1"
+    },
+    {
       "Id": "runtime.native.System.Security.Cryptography.Apple",
       "Version": "4.3.0"
     },
     {
       "Id": "runtime.native.System.Security.Cryptography.OpenSsl",
-      "Version": "4.3.0"
+      "Version": "4.3.1"
     },
     {
       "Id": "runtime.opensuse.13.2-x64.runtime.native.System.Security.Cryptography.OpenSsl",
-      "Version": "4.3.0"
+      "Version": "4.3.1"
     },
     {
       "Id": "runtime.opensuse.42.1-x64.runtime.native.System.Security.Cryptography.OpenSsl",
-      "Version": "4.3.0"
+      "Version": "4.3.1"
     },
     {
       "Id": "runtime.osx.10.10-x64.runtime.native.System.Security.Cryptography.Apple",
@@ -281,23 +353,23 @@
     },
     {
       "Id": "runtime.osx.10.10-x64.runtime.native.System.Security.Cryptography.OpenSsl",
-      "Version": "4.3.0"
+      "Version": "4.3.1"
     },
     {
       "Id": "runtime.rhel.7-x64.runtime.native.System.Security.Cryptography.OpenSsl",
-      "Version": "4.3.0"
+      "Version": "4.3.1"
     },
     {
       "Id": "runtime.ubuntu.14.04-x64.runtime.native.System.Security.Cryptography.OpenSsl",
-      "Version": "4.3.0"
+      "Version": "4.3.1"
     },
     {
       "Id": "runtime.ubuntu.16.04-x64.runtime.native.System.Security.Cryptography.OpenSsl",
-      "Version": "4.3.0"
+      "Version": "4.3.1"
     },
     {
       "Id": "runtime.ubuntu.16.10-x64.runtime.native.System.Security.Cryptography.OpenSsl",
-      "Version": "4.3.0"
+      "Version": "4.3.1"
     },
     {
       "Id": "Serilog",
@@ -384,11 +456,23 @@
       "Version": "4.3.1"
     },
     {
+      "Id": "System.Diagnostics.FileVersionInfo",
+      "Version": "4.0.0"
+    },
+    {
+      "Id": "System.Diagnostics.Process",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.Diagnostics.StackTrace",
       "Version": "4.3.0"
     },
     {
       "Id": "System.Diagnostics.Tools",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Diagnostics.TraceSource",
       "Version": "4.3.0"
     },
     {
@@ -436,6 +520,18 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "System.IO.FileSystem.Watcher",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.IO.MemoryMappedFiles",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.IO.UnmanagedMemoryStream",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.Linq",
       "Version": "4.3.0"
     },
@@ -444,12 +540,16 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Linq.Parallel",
+      "Version": "4.3.0"
+    },
+    {
       "Id": "System.Linq.Queryable",
       "Version": "4.3.0"
     },
     {
       "Id": "System.Net.Http",
-      "Version": "4.3.0"
+      "Version": "4.3.2"
     },
     {
       "Id": "System.Net.NameResolution",
@@ -464,11 +564,23 @@
       "Version": "4.3.0"
     },
     {
-      "Id": "System.Net.Security",
+      "Id": "System.Net.Requests",
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Net.Security",
+      "Version": "4.3.1"
+    },
+    {
       "Id": "System.Net.Sockets",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Net.WebHeaderCollection",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Numerics.Vectors",
       "Version": "4.3.0"
     },
     {
@@ -477,6 +589,10 @@
     },
     {
       "Id": "System.Reflection",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Reflection.DispatchProxy",
       "Version": "4.3.0"
     },
     {
@@ -505,6 +621,10 @@
     },
     {
       "Id": "System.Reflection.TypeExtensions",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Resources.Reader",
       "Version": "4.3.0"
     },
     {
@@ -537,6 +657,10 @@
     },
     {
       "Id": "System.Runtime.InteropServices.WindowsRuntime",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Runtime.Loader",
       "Version": "4.3.0"
     },
     {
@@ -600,6 +724,10 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Text.Encoding.CodePages",
+      "Version": "4.0.1"
+    },
+    {
       "Id": "System.Text.Encoding.Extensions",
       "Version": "4.3.0"
     },
@@ -620,7 +748,15 @@
       "Version": "4.3.0"
     },
     {
+      "Id": "System.Threading.Tasks.Dataflow",
+      "Version": "4.7.0"
+    },
+    {
       "Id": "System.Threading.Tasks.Extensions",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Threading.Tasks.Parallel",
       "Version": "4.3.0"
     },
     {
@@ -645,6 +781,18 @@
     },
     {
       "Id": "System.Xml.XmlDocument",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Xml.XmlSerializer",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Xml.XPath",
+      "Version": "4.3.0"
+    },
+    {
+      "Id": "System.Xml.XPath.XDocument",
       "Version": "4.3.0"
     }
   ],
