--- a/Docker/ClusterKitManager/fallBackConfiguration.json
+++ b/Docker/ClusterKitManager/fallBackConfiguration.json
@@ -1,5 +1,5 @@
 {
-  "Configuration": "{\n   ClusterKit {\n    NodeManager.ConfigurationDatabaseConnectionString = \"User ID=postgres;Host=configDb;Port=5432;Pooling=true\"\n\tNodeManager.DefaultNugetFeeds {\n      publicFeed {\n              address = \"/opt/packageCache\"\n              type = public\n      } \n      privateFeed {\n              address = \"http://nuget/\"\n              type = private\n      }          \n    }  \n  }\n}",
+  "Configuration": "{\n   ClusterKit {\n    NodeManager.ConfigurationDatabaseConnectionString = \"User ID=postgres;Host=configDb;Port=5432;Pooling=true\"\n    NodeManager.ConfigurationDatabaseName = \"ClusterKit.NodeManagerConfiguration\"\n    NodeManager.ConfigurationDatabaseProviderName = \"Npgsql\"\n    NodeManager.PackageRepository = \"http://nuget/\"\n	NodeManager.DefaultNugetFeeds {\n      privateFeed {\n              address = \"http://nuget/\"\n              type = private\n      }          \n    }  \n  }\n}",
   "NodeTemplate": "clusterManager",
   "ReleaseId": 1,
   "Packages": [
@@ -540,6 +540,14 @@
       "Version": "1.1.0"
     },
     {
+      "Id": "NuGet.Client",
+      "Version": "4.0.0"
+    },
+    {
+      "Id": "NuGet.Commands",
+      "Version": "4.0.0"
+    },
+    {
       "Id": "NuGet.Common",
       "Version": "4.0.0"
     },
@@ -548,7 +556,19 @@
       "Version": "4.0.0"
     },
     {
+      "Id": "NuGet.ContentModel",
+      "Version": "4.0.0"
+    },
+    {
+      "Id": "NuGet.DependencyResolver.Core",
+      "Version": "4.0.0"
+    },
+    {
       "Id": "NuGet.Frameworks",
+      "Version": "4.0.0"
+    },
+    {
+      "Id": "NuGet.LibraryModel",
       "Version": "4.0.0"
     },
     {
@@ -564,11 +584,23 @@
       "Version": "4.0.0"
     },
     {
+      "Id": "NuGet.ProjectModel",
+      "Version": "4.0.0"
+    },
+    {
       "Id": "NuGet.Protocol.Core.Types",
       "Version": "4.0.0"
     },
     {
       "Id": "NuGet.Protocol.Core.v3",
+      "Version": "4.0.0"
+    },
+    {
+      "Id": "NuGet.Repositories",
+      "Version": "4.0.0"
+    },
+    {
+      "Id": "NuGet.RuntimeModel",
       "Version": "4.0.0"
     },
     {
@@ -1121,7 +1153,6 @@
     }
   ],
   "PackageSources": [
-    "/opt/packageCache",
     "http://nuget/"
   ],
   "Seeds": [
