--- a/Docker/ClusterKitPublisher/fallBackConfiguration.json
+++ b/Docker/ClusterKitPublisher/fallBackConfiguration.json
@@ -804,9 +804,7 @@
       "Version": "4.3.0"
     }
   ],
-  "PackageSources": [
-    "http://nuget/"
-  ],
+  "PackageSource": "http://nuget/",
   "Seeds": [
     "akka.tcp://ClusterKit@seed:3090"
   ]
