--- a/Docker/ClusterKitManager/fallBackConfiguration.json
+++ b/Docker/ClusterKitManager/fallBackConfiguration.json
@@ -925,7 +925,7 @@
     },
     {
       "Id": "System.Private.DataContractSerialization",
-      "Version": "4.1.1"
+      "Version": "4.3.0"
     },
     {
       "Id": "System.Reflection",
@@ -1017,7 +1017,7 @@
     },
     {
       "Id": "System.Runtime.Serialization.Xml",
-      "Version": "4.1.1"
+      "Version": "4.3.0"
     },
     {
       "Id": "System.Runtime.WindowsRuntime",
@@ -1152,8 +1152,7 @@
       "Version": "4.3.0"
     }
   ],
-   "PackageSource": "http://nuget/",
-
+  "PackageSources": null,
   "Seeds": [
     "akka.tcp://ClusterKit@seed:3090"
   ]
